Move methods into System script