@@ -1,12 +1,4 @@
 BaseUtil(){
-	extendAntOpts(){
-		if [[ ${1} =~ 6. ]]; then
-			echo $(timestamp log) [ INFO_ ] Configuring ANT_OPTS JVM...
-			export ANT_OPTS="${ANT_OPTS} -XX:MaxPermSize=1024m"
-			echo $(timestamp log) [ INFO_ ] Completed.
-		fi
-	}
-
 	getCurFile(){
 		local thisFile=${0//*\//}
 
@@ -28,14 +20,6 @@ BaseUtil(){
 
 		if [[ $(netstat -an | grep ${1}) ]]; then
 			echo true
-		fi
-	}
-
-	setJavaHome(){
-		if [[ ${1} =~ 6. ]]; then
-			echo $(timestamp log) [ INFO_ ] Configuring Liferay to use JDK7...
-			export JAVA_HOME="C:\Program Files\Java\jdk1.7.0_80"
-			echo $(timestamp log) [ INFO_ ] Completed.
 		fi
 	}
 
